# ObjectiveGL

./: .gitignore  LICENSE  README.md
Android/: build.gradle  local.properties  settings.gradle
Android/app/: build.gradle
Android/app/src/androidTest/java/com/objectivegl/: ExampleInstrumentedTest.kt
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/cpp/: CMakeLists.txt  ObjectiveGLExample.cpp  native-lib.cpp
Android/app/src/main/java/com/objectivegl/: MainActivity.kt
Android/app/src/main/res/layout/: activity_main.xml
Android/app/src/main/res/values/: strings.xml
Android/app/src/test/java/com/objectivegl/: ExampleUnitTest.kt
Android/gradle/wrapper/: gradle-wrapper.properties
Android/objectivegl/src/androidTest/java/com/tencent/camerasdk/objectivegl/: ExampleInstrumentedTest.java
Android/objectivegl/src/main/: AndroidManifest.xml
Android/objectivegl/src/main/java/com/tencent/camerasdk/objectivegl/: GLBuffer.kt  GLFrameBuffer.kt  GLObject.kt  GLProgram.kt  GLTexture.kt  GLVertexArray.kt
Android/objectivegl/src/main/java/com/tencent/camerasdk/objectivegl2/: GLArrayBuffer.kt  GLFrameBuffer.kt  GLObject.kt  GLProgram.kt  GLTexture.kt  GLVertexArray.kt
Android/objectivegl/src/main/java/com/tencent/camerasdk/objectivegl3/: GLBuffer.kt  GLFrameBuffer.kt  GLObject.kt  GLProgram.kt  GLTexture.kt  GLVertexArray.kt
Android/objectivegl/src/main/res/values/: strings.xml
Android/objectivegl/src/test/java/com/tencent/camerasdk/objectivegl/: ExampleUnitTest.java
Source/: GLBuffer.h  GLCaps.h  GLContext.cpp  GLContext.h  GLError.h  GLFrameBuffer.h  GLObject.h  GLPlatform.h  GLProgram.h  GLRenderBuffer.h  GLTexture.h  GLUtil.h  GLVertexArray.h  ObjectiveGL.h
Source/platform/android/: GLPlatform.cpp
Source/platform/ios/: GLPlatform.mm
iOS/ObjectiveGL.xcodeproj/: project.pbxproj
iOS/ObjectiveGL.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
include/ObjectiveGL/: GLBuffer.h  GLCaps.h  GLContext.h  GLError.h  GLFrameBuffer.h  GLObject.h  GLPlatform.h  GLProgram.h  GLRenderBuffer.h  GLTexture.h  GLTexturePool.h  GLUtil.h  GLVertexArray.h  ObjectiveGL.h
include/ObjectiveGL/Platform/android/: GLAndContext.h  GLAndUtil.h  GLPlatform.cpp
include/ObjectiveGL/Platform/ios/: GLIOSContext.h  GLIOSUtil.h
include/ObjectiveGL/iOS/: GLIOSContext.h  GLIOSUtil.h
